--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,20 @@
             <name>sonatype</name>
             <url>https://oss.sonatype.org/content/repositories/snapshots</url>
         </repository>
+
+        <repository><id>central</id>
+            <name>central</name>
+            <url>http://central.maven.org/maven2/</url>
+        </repository>
+
+
+        <repository><id>jcenter</id>
+            <name>jcenter</name>
+            <url>https://jcenter.bintray.com/</url>
+        </repository>
+
+
+
     </repositories>
     <groupId>im.zom.ractive</groupId>
     <artifactId>zombot-java</artifactId>
@@ -17,20 +31,6 @@
 
     <name>Zombot</name>
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-csv -->
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-csv</artifactId>
-            <version>1.4</version>
-        </dependency>
-
-        <!-- https://mvnrepository.com/artifact/ca.pjer/chatter-bot-api -->
-        <dependency>
-            <groupId>ca.pjer</groupId>
-            <artifactId>chatter-bot-api</artifactId>
-            <version>1.3.3</version>
-        </dependency>
-
 
 
         <dependency>
@@ -74,9 +74,24 @@
             <version>4.2.1-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>net.sourceforge</groupId>
+            <artifactId>jwbf</artifactId>
+            <version>3.1.1</version>
+        </dependency>
 
 
+        <dependency>
+            <groupId>info.bliki.wiki</groupId>
+            <artifactId>bliki-core</artifactId>
+            <version>3.1.0</version>
+        </dependency>
 
+        <dependency>
+            <groupId>com.rivescript</groupId>
+            <artifactId>rivescript-core</artifactId>
+            <version>0.10.0</version>
+        </dependency>
     </dependencies>
 
     <build>
